--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "bootstrap": "^4.1.3",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
@@ -17,6 +18,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "font-awesome": "^4.7.0",
     "redux": "^4.0.0"
   }
 }
